--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* Type Selector */
+<style>
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+</style>
 
 p {
     font-size: 1em; /* 16px, ?pt, 1005, 1em */
@@ -6,7 +9,7 @@ p {
 }
 
 figcaption {
-  font: normal 0.75em/1.5em Georgia, "New Times Roman", serif;
+  font: normal 0.75em/1.5em Roboto, "New Times Roman", serif;
   color: #777;
   text-align: right;
 }
