--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 <style>
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 </style>
+<style>
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
+</style>
 
 p {
     font-size: 1em; /* 16px, ?pt, 1005, 1em */
@@ -9,7 +12,7 @@ p {
 }
 
 figcaption {
-  font: normal 0.75em/1.5em Roboto, "New Times Roman", serif;
+  font: normal 0.75em/1.5em Pacifico, "New Times Roman", serif;
   color: #777;
   text-align: right;
 }
