automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ p {
 }
 
 figcaption {
-  font: normal 0.75em/1.5em Pacifico, "New Times Roman", serif;
+  font: normal 0.75em/1.5em Pacifico, cursive;
   color: #777;
   text-align: right;
 }
