--- a/css/style.css
+++ b/css/style.css
@@ -22,5 +22,5 @@ figcaption {
 .milk-text { /* Selects elements of class milk-text */
   font: bold 2.6em Pacifico, cursive;
   color: white;
-  text-shadow: 0 2px 3px x000;
+  text-shadow: 1px 2px 3px x000;
 }
