--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,19 @@ figcaption {
   color: white;
   text-shadow: 1px 2px 3px x000;
 }
+
+/* Id Selector */
+
+#logo { /* Selects elements with id of 'logo' */
+    background: aqua;
+}
+
+/* Descendent Selector */
+
+#logo h1 { /* Only styles <h1>'s if inside 'logo' */
+  font-family: Pacifico, cursive;
+}
+
+#logo h2 {
+  font-family: Roboto, cursive;
+}
