automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ figcaption {
 
 /* Psuedo Selector */
 
-#details a:link, #details a:visted {
+#details a:link, #details a:visited {
   color: blue;
   text-decoration: none;
 }
